# mediasoup-client-pysdk

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml
examples/: sdkApiDemo.py
smcdk/: __init__.py  ortc.py
smcdk/api/: __init__.py  mediasoup_client.py  mediasoup_listener.py  mediasoup_signaler.py  multimedia_runtime.py  notification_listener.py  request_listener.py  room_peer.py  stats_collector.py
smcdk/handlers/: aiortc_handler.py
smcdk/handlers/sdp/: common_utils.py  remote_sdp.py
smcdk/log/: logger.py
tests/: __init__.py  fake_handler.py  fake_parameters.py
